# secops-toolkit-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/secops_toolkit_mcp/: __init__.py  cli.py  core.py  server.py
tests/: test_cli.py  test_core.py
