[project]
name = "secops-toolkit-mcp"
version = "0.2.0"
description = "An MCP server of local, defensive SecOps helpers: IOC extraction, defang/refang, hashing, password entropy, and CIDR math."
readme = "README.md"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "security", "secops", "ioc", "fastmcp"]
authors = [
    { name = "glatinone", email = "93207632+glatinone@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
]

[project.scripts]
secops-toolkit-mcp = "secops_toolkit_mcp:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
